[project]
name = "pj-stations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
